# triton_launchfiles

./: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
etc/: marker_both.yaml  marker_detector.yaml  marker_detector_down.yaml  marker_detector_ee.yaml  marker_detector_forward.yaml  marker_detector_panel.yaml
launch/: all_detections.launch  all_detections_one_camera.launch  all_detections_two_cameras.launch  ar_marker_detector.launch  ar_marker_endeffector.launch  ar_marker_panel.launch  ar_marker_panel_detector.launch  cam2cam_calibration.launch  color_tracker.launch  color_trainer.launch  marker_transform_calibration.launch  run_bagfile.launch  template_pose_estimation.launch  valve_autotuning.launch  valve_tracker.launch  valve_trainer.launch
launch/one_camera/: ar_marker_endeffector.launch  valve_tracker.launch
launch/two_cameras/: ar_marker_endeffector.launch  ar_marker_panel.launch  template_pose_estimation.launch  valve_tracker.launch
