<package>
  <name>triton_launchfiles</name>
  <version>1.0.0</version>
  <description>Package to handle the triton project nodes</description>
  <author>Miquel Massot, Pep Lluis Negre</author>
  <maintainer email="pl.negre@uib.cat">Pep Lluis Negre</maintainer>
  <maintainer email="m.massot@uib.cat">Miquel Massot</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/triton_launchfiles</url>
  <url type="bugtracker">https://github.com/srv/triton_launchfiles/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>